commit 110123 02:05 js capstone

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="maintitle" id="maintitle"><h1 id="titleHdr">My Desktop Contacts</h1></div>
-      <div class="main_page_container" id="main_page_container">
-       <div class="subheaders" id="addNew"><h2 id="newItemHeader">Add New      Contact</h2></div>
+    <div class="main_page_container" id="main_page_container">
 
-     <div class="subheaders" id="view_contacts" ><h2 id="savedContactsHdr">View Contacts</h2></div>
+        <div class="subheaders" id="addNew"><h2 id="newItemHeader">Add New      Contact</h2></div>
+
+        <div class="subheaders" id="view_contacts" ><h2 id="savedContactsHdr">View Contacts</h2></div>
     </div>
 
     <!-- div to contain form for new contact entry -->
@@ -70,11 +71,11 @@
                 <input type="date" id="birthday" name="birthday" value="">
               </div>
               <div id="fbtn1">
-                <h2>Return</h2>
+                <h2 id="btn1h2">Return</h2>
                 <!-- <button type="button" id="bt1">Cancel</button> -->
               </div>
               <div id="fbtn2">
-                <h2>Save</h2>
+                <h2 id="btn2h2">Save</h2>
                 <!-- <button type="button" id="bt2">Save</button> -->
               </div>
 
@@ -107,7 +108,7 @@
       </div>
 
         
-      <div class="deleteDiv" id="deleteDiv"><h3 id="deleteHeader">View Mode</h3></div>
+      <div class="deleteDiv" id="deleteDiv"><h3 id="deleteHeader">View Mode</h3></div>  
      
     </div>
 
