commit 120123 16:11 js capstone

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <input type="text" id="contactName" name="name" value="">
               </div>
               <div id="l2">
-                <label for="mobile">Mobile No:</label>
+                <label for="mobile">Mobile:</label>
               </div>
               <div id="f2">
                 <input type="tel" pattern="[0-9]*" id="mobile" name="mobile" value="">
               </div>
               <div id="l3">
-                <label for="landline">Landline No:</label>
+                <label for="landline">Landline:</label>
               </div>
               <div id="f3">
                 <input type="tel" pattern="[0-9]*" id="landline" name="landline" value="">
