added css comments, added/removed js comments

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  
     <div class="maintitle" id="maintitle"><h1 id="titleHdr">Desktop Contacts</h1></div>
+
+    <!--  div for main screen menu items -->
+
     <div class="main_page_container" id="main_page_container">
 
         <div class="subheaders" id="addNew"><h2 id="newItemHeader">Add New      Contact</h2></div>
